# gpu-burn

./: CMakeLists.txt  create-gpu-burn-deb.sh  gpu_burn-drv.cpp
